--- a/Ingenio.PortalWebExterno/Views/Home/ConveniosC.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/ConveniosC.cshtml
@@ -60,71 +60,71 @@
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/aventura_turs.jpg">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div class="convenio__items beneficio_item">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/confamiliar_nariño.jpg">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div class="convenio__items">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/Familias_en_Accion.png">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div class="convenio__items salud_item">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/H_Civil_Ipiales.png">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div class="convenio__items financiero_item">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/Iglesia_Cristiana.jpg">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div id="finagro" class="convenio__items beneficio_item">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/INVÍAS_Colombia_logo.png">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div id="finagro" class="convenio__items financiero_item">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/pasto.jpg">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div id="finagro" class="convenio__items financiero_item">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/Popayan.png">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div id="finagro" class="convenio__items financiero_item">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/Sandona.jpg">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div id="finagro" class="convenio__items beneficio_item">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/turismo_andino.jpg">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div id="finagro" class="convenio__items exequial_item">
             <div class="container__imagen__convenio"><img src="~/img/Convenios/yo_reinare.png"></div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
         <div id="finagro" class="convenio__items seguros_item">
             <div class="container__imagen__convenio">
                 <img src="~/img/Convenios/seguros_de_vida.png">
             </div>
-            <a class="myButtons">Ingresar</a>
+            @*<a class="myButtons">Ingresar</a>*@
         </div>
     </div>
 </section>
