--- a/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
@@ -347,12 +347,12 @@
                     <div class="tarjetas-Centradas gBoxShadow animacion_arriba">
                         <img src="~/img/Img_Web2/iconos/simuladores.png" />
                         <h3>Simuladores</h3>
-                        <button class="myButtons">Ingresar</button>
+                        <a href="/Home/simulador" class="myButtons">Ingresar</a>
                     </div>
                     <div class="tarjetas-Centradas gBoxShadow animacion_arriba">
                         <img src="~/img/Img_Web2/icono-enlaces.png" />
                         <h3>Virtual</h3>
-                        <button class="myButtons">Ingresar</button>
+                        <a href="/Home/elegir_cofinal" class="myButtons">Ingresar</a>
                     </div>
                 </section>
             </section>
@@ -400,22 +400,18 @@
                         <div id="Noticias_Carrusel" class="my-slider-noticias" style="display:none;">
                             <div class="noticas_subcontainer">
                                 <div class="img_notica">
-                                    <img src="~/img/Img_Web2/credito_Vivienda.jpg"
+                                    <img src="~/img/Img_Web2/ganadores.png"
                                          alt=""
                                          class="img-contenedor-noticia">
                                 </div>
                                 <div class="titulo_noticia">
-                                    <h3>Nuevas Cuotas de Interes</h3>
+                                    <h3>Ganadores Campaña Prepara Tus Maletas</h3>
                                     <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry. Lorem Ipsum has been theLorem Ipsum is simply dummy
-                                        text of the printing and typesetting industry. Lorem Ipsum has
-                                        been the Lorem Ipsum is simply dummy text of the printing and
-                                        typesetting industry. Lorem Ipsum has been the Lorem Ipsum is
+                                        COFINAL se permite infomar el resultado del sorteo de tres Planes de Viaje, real¡zado en las instalacionesde la Cooperat¡va, el día 11 de noviembre del año en curso, en presencia de la Gerente General y delSubgerente Comercial, auditado por la Oficial de Cumplim¡ento y el Direc{or de Control lntemo
                                     </p>
                                 </div>
                                 <div class="footer_noticia">
-                                    <span class="myButtons">Conoce más</span>
+                                    <a href="~/home/noticias" class="myButtons">Conoce más</a>
                                 </div>
                                 <div class="noticia_fecha">
                                     <span>11</span>
@@ -424,98 +420,68 @@
                             </div>
                             <div class="noticas_subcontainer">
                                 <div class="img_notica">
-                                    <img src="~/img/Img_Web2/credito_Vivienda.jpg"
+                                    <img src="~/img/Img_Web2/Carrera.png"
                                          alt=""
                                          class="img-contenedor-noticia">
                                 </div>
                                 <div class="titulo_noticia">
-                                    <h3>Nuevas Cuotas de Interes</h3>
+                                    <h3>Carrera Atlética Por La Vida Y La Salud</h3>
                                     <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry. Lorem Ipsum has been theLorem Ipsum is simply dummy
-                                        text of the printing and typesetting industry. Lorem Ipsum has
-                                        been the Lorem Ipsum is simply dummy text of the printing and
-                                        typesetting industry. Lorem Ipsum has been the Lorem Ipsum is
+                                        Con objeto de dar cumplimiento a la gesüón cooperativa de Cofinal, el Comité de
+                                        Educación con apoyo de la fundac¡ón Cofinal ha organizado una carrera atlética, la
+                                        cual estará d¡vidida por zonas.
                                     </p>
                                 </div>
                                 <div class="footer_noticia">
-                                    <span class="myButtons">Conoce más</span>
+                                    <a href="~/home/noticias" class="myButtons">Conoce más</a>
                                 </div>
                                 <div class="noticia_fecha">
-                                    <span>11</span>
-                                    <span>Nov</span>
+                                    <span>8</span>
+                                    <span>Oct</span>
                                 </div>
                             </div>
                             <div class="noticas_subcontainer">
                                 <div class="img_notica">
-                                    <img src="~/img/Img_Web2/credito_Vivienda.jpg"
+                                    <img src="~/img/Img_Web2/icfes.png"
                                          alt=""
                                          class="img-contenedor-noticia">
                                 </div>
                                 <div class="titulo_noticia">
-                                    <h3>Nuevas Cuotas de Interes</h3>
+                                    <h3>Premiación Mejores ICFES Por Agencias</h3>
                                     <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry. Lorem Ipsum has been theLorem Ipsum is simply dummy
-                                        text of the printing and typesetting industry. Lorem Ipsum has
-                                        been the Lorem Ipsum is simply dummy text of the printing and
-                                        typesetting industry. Lorem Ipsum has been the Lorem Ipsum is
+                                        La premiación de los asociados que obtuvieron los mejores resultados en las
+                                        pruebas ICFES 2021,la cual se desanolló en cada una de la Agencias de la Cooperaüva
+                                        de ahono y crédito Cof¡nal Ltda.
                                     </p>
                                 </div>
                                 <div class="footer_noticia">
-                                    <span class="myButtons">Conoce más</span>
+                                    <a href="~/home/noticias" class="myButtons">Conoce más</a>
                                 </div>
                                 <div class="noticia_fecha">
-                                    <span>11</span>
-                                    <span>Nov</span>
+                                    <span>05</span>
+                                    <span>Abril</span>
                                 </div>
                             </div>
                             <div class="noticas_subcontainer">
                                 <div class="img_notica">
-                                    <img src="~/img/Img_Web2/credito_Vivienda.jpg"
+                                    <img src="~/img/Img_Web2/icfes.png"
                                          alt=""
                                          class="img-contenedor-noticia">
                                 </div>
                                 <div class="titulo_noticia">
-                                    <h3>Nuevas Cuotas de Interes</h3>
+                                    <h3>Premiación Mejores ICFES Por Agencias</h3>
                                     <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry. Lorem Ipsum has been theLorem Ipsum is simply dummy
-                                        text of the printing and typesetting industry. Lorem Ipsum has
-                                        been the Lorem Ipsum is simply dummy text of the printing and
-                                        typesetting industry. Lorem Ipsum has been the Lorem Ipsum is
+                                        La premiación de los asociados que obtuvieron los mejores resultados en las
+                                        pruebas ICFES 2021,la cual se desanolló en cada una de la Agencias de la Cooperaüva
+                                        de ahono y crédito Cof¡nal Ltda.
                                     </p>
                                 </div>
                                 <div class="footer_noticia">
-                                    <span class="myButtons">Conoce más</span>
+                                    <a href="~/home/noticias" class="myButtons">Conoce más</a>
                                 </div>
                                 <div class="noticia_fecha">
-                                    <span>11</span>
-                                    <span>Nov</span>
-                                </div>
-                            </div>
-                            <div class="noticas_subcontainer">
-                                <div class="img_notica">
-                                    <img src="~/img/Img_Web2/credito_Vivienda.jpg"
-                                         alt=""
-                                         class="img-contenedor-noticia">
-                                </div>
-                                <div class="titulo_noticia">
-                                    <h3>Nuevas Cuotas de Interes</h3>
-                                    <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry. Lorem Ipsum has been theLorem Ipsum is simply dummy
-                                        text of the printing and typesetting industry. Lorem Ipsum has
-                                        been the Lorem Ipsum is simply dummy text of the printing and
-                                        typesetting industry. Lorem Ipsum has been the Lorem Ipsum is
-                                    </p>
-                                </div>
-                                <div class="footer_noticia">
-                                    <span class="myButtons">Conoce más</span>
-                                </div>
-                                <div class="noticia_fecha">
-                                    <span>11</span>
-                                    <span>Nov</span>
+                                    <span>05</span>
+                                    <span>Abril</span>
                                 </div>
                             </div>
                         </div>
@@ -545,7 +511,7 @@
                             <iframe class="tam_video_2" width="560" height="315" src="https://www.youtube.com/embed/bzm2pKyMBhw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>*@                    
                     </div>
-                    <h3>Titulo del video</h3>
+                    <h3>Promocion Red Coopcentral</h3>
                 </div>
                 <div class="multi_texto">
                     <div class="texto_video">
@@ -650,7 +616,7 @@
 
     @*@Scripts.Render( "~/bundles/jquery" )*@
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/plantilla")
+    @Scripts.Render("~/bundles/plantilla")  
     @Scripts.Render("~/bundles/plantillaCarousel")
 
     <!--script del mapa-->
