--- a/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
@@ -174,34 +174,36 @@
 </section>
 
 
-<section class="container__multi">
-    @*<div class="container__header_multi">
-            <h3>Portal Transaccional</h3>
-            <p>Realice transacciones de forma facil y segura</p>
-        </div>*@
-    <div class="container__main__multi">
+<div class="multiportal-contenedor-general">
+    <section class="container__multi">
+        @*<div class="container__header_multi">
+                <h3>Portal Transaccional</h3>
+                <p>Realice transacciones de forma facil y segura</p>
+            </div>*@
+        <div class="container__main__multi">
 
-        <h2 class="tituleAnimation">Persona Natural</h2>
+            <h2 class="tituleAnimation">Persona Natural</h2>
 
-        <div class="big__container__multi">
-            <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
-                <img src="~/img/Img_Web2/portal_tarjeta_persona.png" alt="Alternate Text" />
-            </a>
-            <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
-                <img src="~/img/Img_Web2/registrarse_portal.png" alt="Alternate Text" />
-            </a>
+            <div class="big__container__multi">
+                <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
+                    <img src="~/img/Img_Web2/portal_tarjeta_persona.png" alt="Alternate Text" />
+                </a>
+                <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
+                    <img src="~/img/Img_Web2/registrarse_portal.png" alt="Alternate Text" />
+                </a>
+            </div>
+            <h2 class="tituleAnimation">Persona Juridica</h2>
+            <div class="big__container__multi">
+                <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
+                    <img src="~/img/Img_Web2/portal_tarjeta.png" alt="Alternate Text" />
+                </a>
+                <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
+                    <img src="~/img/Img_Web2/registrarse_portal_juridica.png" alt="Alternate Text" />
+                </a>
+            </div>
         </div>
-        <h2 class="tituleAnimation">Persona Juridica</h2>
-        <div class="big__container__multi">                                                                                                                           
-            <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
-                <img src="~/img/Img_Web2/portal_tarjeta.png" alt="Alternate Text" />
-            </a>
-            <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
-                <img src="~/img/Img_Web2/registrarse_portal_juridica.png" alt="Alternate Text" />
-            </a>
-        </div>
-    </div>
-</section>
+    </section>
+</div>
 
 
 <section style=" margin-bottom: 0px;display:none">
