--- a/Ingenio.PortalWebExterno/Views/Home/Productos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Productos.cshtml
@@ -120,7 +120,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -199,7 +199,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
 
                 <!-- ---------------CIERRA CUENTA COFIAHORRITO------------------------------ -->
@@ -235,7 +235,7 @@
                                                 <li>
                                                     Nuestros jóvenes asociados reciben todos los beneficios del fondo de solidaridad de la cooperativa.
                                                 </li>
-                                                <li>El manejo de la tarjeta débito es de $ 5.000 mensuales, la cooperativa a través del Fondo de Solidaridad, aporta un 50% para un cobro final al asociado de $ 2.500</li>
+                                                @*<li>El manejo de la tarjeta débito es de $ 5.000 mensuales, la cooperativa a través del Fondo de Solidaridad, aporta un 50% para un cobro final al asociado de $ 2.500</li>*@
                                                 <li>Los jóvenes ya inician su historial crediticio.</li>
                                                 <li>Pueden obtener créditos si son mayores de edad.</li>
                                                 <li>Acceso a realizar transacciones a través del Multiportal Transaccional.</li>
@@ -273,7 +273,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -360,7 +360,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
                 <!-- ---------------CIERRA CUENTA COFIJUNIOR------------------------------ -->
                 <!-- ---------------INICIA CUENTA COFIDIARIO------------------------------ -->
@@ -425,7 +425,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -532,7 +532,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
 
                 <!-- ---------------CIERRA CUENTA COFIDIARIO------------------------------ -->
@@ -602,7 +602,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -655,7 +655,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
 
 
@@ -726,7 +726,7 @@
                     </div>
 
 
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -762,7 +762,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div>*@
                 </div>
 
                 <!-- ---------------CIERRA CUENTA AHORRO CONTRACTUAL------------------------------ -->
@@ -813,7 +813,7 @@
                                         <div class="panel-body">
                                             <p class="text-justify">El ahorro programado Semilla Cooperativa, tendrá las siguientes condiciones:</p>
                                             <ul class="text-justify">
-                                                <li>El saldo mínimo para establecer un Ahorro programado Semilla Cooperativa será de $10.000.</li>
+                                                @*<li>El saldo mínimo para establecer un Ahorro programado Semilla Cooperativa será de $10.000.</li>*@
                                             </ul>
                                         </div>
                                     </div>
@@ -843,7 +843,7 @@
                         </div>
 
                     </div>
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -1017,7 +1017,7 @@
 
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
 
                 <!-- ---------------CIERRA CUENTA CONTRACTUAL------------------------------ -->
@@ -1180,34 +1180,47 @@
                                         <tbody>
                                             <tr>
                                                 <td>60 - 90</td>
-                                                <td>8.0%</td>
+                                                <td>14.0%</td>
                                             </tr>
                                             <tr>
-                                                <td>91 - 180</td>
-                                                <td>8.3%</td>
+                                                <td>91 - 120</td>
+                                                <td>14.25%</td>
                                             </tr>
                                             <tr>
-                                                <td>181 - 270</td>
-                                                <td>8.5%</td>
+                                                <td>121-150</td>
+                                                <td>14.50%</td>
                                             </tr>
                                             <tr>
-                                                <td>271 - 360</td>
-                                                <td>9.0%</td>
+                                                <td>151-180</td>
+                                                <td>14.75%</td>
                                             </tr>
                                             <tr>
-                                                <td> >361 </td>
-                                                <td>9.5%</td>
+                                                <td>181-210</td>
+                                                <td>15.00%</td>
                                             </tr>
-                                            @*@<tr>
-                                                <td>271 - 365 </td>
-                                                <td>5,50%</td>
-                                            </tr>*@                                            
-                                            @*@<tr>
-                                                <td> >365 </td>
-                                                <td>6,50%</td>
-                                            </tr>*@
+                                            <tr>
+                                                <td>211-240</td>
+                                                <td>15.25%</td>
+                                            </tr>
+                                            <tr>
+                                                <td>241-270</td>
+                                                <td>15.50%</td>
+                                            </tr>
+                                            <tr>
+                                                <td>271-300</td>
+                                                <td>15.75%</td>
+                                            </tr>
+                                            <tr>
+                                                <td>301-330</td>
+                                                <td>16.00%</td>
+                                            </tr>
+                                            <tr>
+                                                <td>331-365</td>
+                                                <td>16.25%</td>
+                                            </tr>
                                         </tbody>
                                     </table>
+                                    <a class="myButtons" href="~/home/Simulador">Simulador</a>
                                 </div>
                             </div>
                         </div><!--termina tabla de montos-->
