--- a/Ingenio.PortalWebExterno/Views/Home/ProductosCreditos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/ProductosCreditos.cshtml
@@ -6,7 +6,7 @@
     ViewBag.c = Url.Action("index", "Home/Creditos");
     ViewBag.activo = "potafolioActivo";
 }
-<section style="background-image:url(/img/recortada.jpg); background-attachment: fixed;  background-size: cover; padding-top:20px; margin-top:-40px; margin-bottom:0px; padding-bottom:40px;">
+<section style="background-image:url(/img/recortada.jpg); background-attachment: fixed;  background-size: cover; padding-top:20px; margin-bottom:0px; padding-bottom:40px;">
     <div class="container">
         <div class="row">
 
@@ -221,7 +221,7 @@
                                         <div class="panel-body">
                                             <ul class="text-justify">
                                                 <li>Plazos desde 2 meses hasta 84 meses dependiendo del monto solicitado.</li>
-                                                <li>Se presta desde <strong>$200.000</strong> hasta <strong>$100’000.000</strong> dependiendo de su nivel de ingresos y el monto del crédito solicitado. En todos los casos se realiza un estudio de la capacidad de endeudamiento del cliente.</li>
+                                                @*<li>Se presta desde <strong>$200.000</strong> hasta <strong>$100’000.000</strong> dependiendo de su nivel de ingresos y el monto del crédito solicitado. En todos los casos se realiza un estudio de la capacidad de endeudamiento del cliente.</li>*@
                                                 <li>Los montos de los créditos se calculan sobre la disponibilidad de pago del solicitante y/o codeudor.</li>
                                                 <li>Cuotas fijas durante la vigencia del crédito</li>
                                                 <li>Aplican condiciones del convenio entre Cofinal en la entidad donde labora el asociado.</li>
