--- a/Ingenio.PortalWebExterno/Content/sass/main_style.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/main_style.scss
@@ -14,6 +14,7 @@
 @import 'pages/_ActualizacionDatos';
 @import 'pages/FormulariosAC';
 @import 'pages/_RteDian.scss';
+@import 'pages/_noticias.scss';
 
 @import 'layout/_footer.scss';
 
